--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,5 +1,5 @@
 :root {
-  --lgt-green: #71fc7d;
+  --lgt-green: #62e46d;
   --white: #fff;
   --black: #000;
   --delay: all 0.3s ease-in-out;
@@ -19,6 +19,12 @@ body {
   color: var(--white);
   -ms-overflow-style: none;
   scrollbar-width: none;
+  user-select: none;
+  user-zoom: none;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 html::-webkit-scrollbar {
@@ -89,10 +95,33 @@ a.nav-link {
   position: absolute;
   top: 24px;
   display: inline-flex;
-  width: 40px;
-  height: 4px;
+  width: 30px;
+  height: 3px;
   background-color: var(--white);
   border-radius: 7px;
+}
+main h2 {
+  text-transform: uppercase;
+  color: var(--black);
+  font-weight: 600;
+  text-align: center;
+  font-size: 86px;
+  line-height: 58px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 0;
+}
+
+main h2::before {
+  content: '';
+  position: absolute;
+  height: 15px;
+  width: 550px;
+  background-color: rgb(240, 240, 240);
+  top: 100px;
+  z-index: -1;
 }
 
 footer {
