--- a/src/css/archive.css
+++ b/src/css/archive.css
@@ -8,6 +8,17 @@
   flex-direction: column;
 }
 
+.nav-item:nth-child(3) .nav-link::after {
+  content: '';
+  position: absolute;
+  top: 24px;
+  display: inline-flex;
+  width: 30px;
+  height: 3px;
+  background-color: var(--white);
+  border-radius: 7px;
+}
+
 main {
   display: flex;
   flex-direction: column;
@@ -60,4 +71,61 @@ main header > p {
 .proj-col-1 > .project:nth-child(2),
 .proj-col-2 > .project:first-child {
   height: 340px;
+}
+
+@media (max-width: 850px) {
+  main {
+    gap: 50px;
+    margin: 150px 0 50px 0;
+  }
+
+  .archives {
+    max-width: 650px;
+  }
+
+  .archives .project {
+    width: 270px;
+  }
+}
+
+@media (max-width: 512px) {
+  main {
+    gap: 50px;
+    margin: 100px 0 30px 0;
+  }
+
+  main header > p {
+    font-weight: 600;
+    margin-top: 10px;
+    font-size: 0.7rem;
+    max-width: 350px;
+    line-height: 0.6rem;
+  }
+
+  main h2::before {
+    top: 25px;
+  }
+
+  .archives {
+    max-width: 350px;
+    border-radius: 15px;
+    column-gap: 15px;
+    padding: 15px;
+  }
+
+  .archives .project {
+    width: 150px;
+    height: 200px;
+    border-radius: 10px;
+  }
+
+  .proj-col-1 > .project:nth-child(2),
+  .proj-col-2 > .project:first-child {
+    height: 240px;
+  }
+
+  .proj-col-1,
+  .proj-col-2 {
+    gap: 15px;
+  }
 }
